cambio loggin y agrego tabs para usar en mesa

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,6 +8,12 @@
 </ion-header>
 
 <ion-content padding>
+<ion-item>
+    <ion-avatar item-start>
+    <!--  <img src={{user.photoUrl}}> -->
+</ion-avatar>
+</ion-item> 
+
 
 <div class="col-md-3">
   <button class="btn btn-default" (click)="goCharacterSheet()">New Character</button>
