--- a/src/pages/lobby/lobby.html
+++ b/src/pages/lobby/lobby.html
@@ -5,11 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>lobby</ion-title>
+    <button class="mb-4" role="img" ion-button col-1 menuToggle>
+      <ion-icon col-7 class=""> <img [src]="menuIcon"> </ion-icon>
+    </button>
+    <ion-title>Lobby</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
