agrego create game y selec game

--- a/src/pages/character-sheet/character-sheet.html
+++ b/src/pages/character-sheet/character-sheet.html
@@ -1,4 +1,4 @@
-<ion-header *ngIf="isRoot()">
+<!--  <ion-header *ngIf="isRoot()">
   <ion-navbar>
      <button clear color="dark" (click)="goBack()" ion-button side="left" col-1 menuClose>
       <ion-icon name="arrow-back"> </ion-icon>
@@ -6,7 +6,7 @@
 	<ion-title>Character Sheet</ion-title>
   </ion-navbar>
 	
-</ion-header>
+</ion-header> -->
 
 <ion-content ng-class="{ isBrowserView : isBrowser== true } ">
 <br>
