--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,13 +9,8 @@
 
 <ion-content padding>
 
+  <button ion-button color="dark" class="btn btn-default" (click)="goCharacterSheet()">New Character</button>
 
-
-<div class="col-md-3">
-  <button class="btn btn-default" (click)="goCharacterSheet()">New Character</button>
-</div>
-<div class="col-md-3">
-  <button class="btn btn-default" (click)="goCharactersPage()">Select Character</button>
-</div>
+  <button ion-button color="dark" class="btn btn-default" (click)="goCharactersPage()">Select Character</button>
 
 </ion-content>
