--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <button role="img" ion-button col-2 menuToggle>
-      <ion-icon col-7 class=""> <img [src]="menuIcon"> </ion-icon>
+      <ion-icon col-7  item-start class=""> <img [src]="menuIcon"> </ion-icon>
     </button>
     <ion-title>Home</ion-title>
   </ion-navbar>
