--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -1,4 +1,6 @@
 
 <ion-content padding>
-
+ <ion-item no-lines offset-3 *ngIf="!gameIsLoaded()">
+    <h2>No Game Loaded</h2>
+  </ion-item>
 </ion-content>
