--- a/src/pages/current-games/current-games.html
+++ b/src/pages/current-games/current-games.html
@@ -18,6 +18,12 @@
     <h2>Select game to play</h2>
   </ion-item>
 
+  <div class="row">
+        <div *ngIf="error" class="alert alert-warning" role="alert">
+            <strong>{{ error }}</strong>
+        </div>
+  </div>  
+
  <ion-list> 
   <ion-item *ngFor="let game of gamesList | async" >
     <button ion-item (click)="selectGame(game.$key)">{{game.gameName}} </button> 
