--- a/src/pages/invites/invites.html
+++ b/src/pages/invites/invites.html
@@ -10,5 +10,22 @@
 
 
 <ion-content padding>
-
+  <div class="tabl-responsive" >
+      <ion-list *ngFor="let invite of playerInvites | async" >
+          <ion-card>
+            <ion-item>
+              <h2> Game : {{invite.gameName}} </h2>
+              <p> Invited By {{invite.gameMaster}}  </p>
+            </ion-item>
+            <ion-card-content> 
+              <ion-row>
+                <ion-col>
+                  <button ion-button color="dark" (click)="joinGame(invite.gameKey)" item-start> Join Game</button>
+                  <button ion-button color="danger" (click)="deleteInvite(invite)" item-end> Delete</button>
+                </ion-col>
+              </ion-row>  
+            </ion-card-content> 
+          </ion-card>
+      </ion-list>     
+</div>
 </ion-content>
