--- a/src/pages/invites/invites.html
+++ b/src/pages/invites/invites.html
@@ -20,8 +20,8 @@
             <ion-card-content> 
               <ion-row>
                 <ion-col>
-                  <button ion-button color="dark" (click)="joinGame(invite.gameKey)" item-start> Join Game</button>
-                  <button ion-button color="danger" (click)="deleteInvite(invite)" item-end> Delete</button>
+                  <button ion-button color="dark" (click)="joinGame(invite.gameKey,invite.$key)" item-start> Join Game</button>
+                  <button ion-button color="danger" (click)="deleteInvite(invite.$key)" item-end> Delete</button>
                 </ion-col>
               </ion-row>  
             </ion-card-content> 
