cambio comportamiento de juego para GM

--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -1,5 +1,5 @@
 
-<ion-content padding class="content-stable" on-swipe-left="hideTime = false" on-swipe-right="hideTime = true">
+<ion-content padding class="content-stable"  on-swipe-right="hideTime = false">
  <ion-item no-lines offset-3 *ngIf="!gameIsLoaded()">
     <h2>No Game Loaded</h2>
   </ion-item>
