--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,8 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <button role="img" ion-button col-2 menuToggle>
-      <ion-icon col-7  item-start class=""> <img [src]="menuIcon"> </ion-icon>
-    </button>
+    <ion-icon col-2 menuToggle class="m-0 p-0"> <img [src]="menuIcon"> </ion-icon>
     <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
