--- a/src/pages/invites/invites.html
+++ b/src/pages/invites/invites.html
@@ -1,9 +1,7 @@
 
 <<ion-header>
   <ion-navbar>
-    <button role="img" ion-button col-2 menuToggle>
-      <ion-icon col-7 class=""> <img [src]="menuIcon"> </ion-icon>
-    </button>
+      <ion-icon col-2 menuToggle class="m-0 p-0"> <img [src]="menuIcon"> </ion-icon>
     <ion-title>Game Invites</ion-title>
   </ion-navbar>
 </ion-header>
